# camera_manager_rs

./: .gitignore  Cargo.toml
src/: camera.rs  lib.rs  main.rs
src/backend/: mod.rs
src/backend/camera_backend/: mod.rs  nokhwa.rs
src/backend/usb_backend/: mod.rs  nusb.rs
