[package]
name = "camera_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "camera_manager"
path = "src/lib.rs"

[dependencies]
nusb = "0.1"
nokhwa = { version = "0.10", features = ["input-native"], no-default-features = true }
anyhow = "1"
usb-ids = "1"
parking_lot = "0.12"
